--- a/src/index.template.html
+++ b/src/index.template.html
@@ -21,9 +21,11 @@
       rel="stylesheet"
     />
     <script src="https://smtpjs.com/v3/smtp.js">
-      
+
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://static.yoomoney.ru/checkout-js/v1/checkout.js"></script>
+    <script src="https://yookassa.ru/checkout-widget/v1/checkout-widget.js"></script>
   <body>
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
